[package]
name = "epoxy-client"
version = "2.0.6"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
async-compression = { version = "0.4.11", features = ["futures-io", "gzip", "brotli"], optional = true }
async-trait = "0.1.80"
base64 = { version = "0.22.1", optional = true }
bytes = "1.6.0"
cfg-if = "1.0.0"
event-listener = "5.3.1"
fastwebsockets = { version = "0.8.0", features = ["unstable-split"], optional = true }
flume = "0.11.0"
futures-rustls = { version = "0.26.0", default-features = false, features = ["tls12", "ring"] }
futures-util = { version = "0.3.30", features = ["sink"] }
getrandom = { version = "0.2.15", features = ["js", "std"], optional = true }
http = "1.1.0"
http-body-util = "0.1.2"
hyper = "1.3.1"
hyper-util-wasm = { version = "0.1.3", features = ["client-legacy", "http1", "http2"] }
js-sys = "0.3.69"
pin-project-lite = "0.2.14"
send_wrapper = "0.4.0"
thiserror = "1.0.61"
tokio = "1.38.0"
tower-service = "0.3.2"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
wasm-streams = "0.4.0"
web-sys = { version = "0.3.69", features = ["BinaryType", "Headers", "MessageEvent", "Request", "RequestInit", "Response", "ResponseInit", "WebSocket"] }
wisp-mux = { path = "../wisp", features = ["wasm"] }

[dependencies.ring]
# update whenever rustls updates
version = "0.17.8"
features = ["wasm32_unknown_unknown_js"]

[dependencies.rustls-pki-types]
# update whenever rustls updates
version = "1.4.1"
features = ["web"]

[dependencies.parking_lot_core]
# update based on Cargo.lock
version = "0.9.10"
features = ["nightly"]

[features]
default = ["full"]
full = ["fastwebsockets", "base64", "async-compression", "getrandom"]

