[package]
name = "epoxy-client"
version = "2.1.2"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
async-compression = { version = "0.4.11", features = ["futures-io", "gzip", "brotli"], optional = true }
async-trait = "0.1.80"
bytes = "1.6.0"
cfg-if = "1.0.0"
event-listener = "5.3.1"
fastwebsockets = { version = "0.8.0", features = ["unstable-split"], optional = true }
flume = "0.11.0"
futures-rustls = { version = "0.26.0", default-features = false, features = ["tls12", "ring"] }
futures-util = { version = "0.3.30", features = ["sink"] }
http = "1.1.0"
http-body-util = "0.1.2"
hyper = "1.3.1"
hyper-util-wasm = { git = "https://github.com/r58Playz/hyper-util-wasm", branch = "opinionated", version = "0.1.7", features = ["client-legacy", "http1"] }
js-sys = "0.3.69"
lazy_static = "1.5.0"
pin-project-lite = "0.2.14"
send_wrapper = "0.4.0"
thiserror = "1.0.61"
tokio = "1.38.0"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
wasm-streams = "0.4.0"
web-sys = { version = "0.3.69", features = ["BinaryType", "Headers", "MessageEvent", "Request", "RequestInit", "Response", "ResponseInit", "WebSocket"] }
webpki-roots = "0.26.3"
wisp-mux = { path = "../wisp", features = ["wasm"] }

[dependencies.getrandom]
version = "*"
features = ["js"]

[dependencies.ring]
version = "*"
features = ["wasm32_unknown_unknown_js"]

[dependencies.rustls-pki-types]
version = "*"
features = ["web"]

[dependencies.parking_lot_core]
version = "*"
features = ["nightly"]

[features]
default = ["full"]
full = ["fastwebsockets", "async-compression", "hyper-util-wasm/http2"]

