[package]
name = "epoxy-client"
version = "2.1.10"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
async-compression = { version = "0.4.12", features = ["futures-io", "gzip", "brotli"], optional = true }
async-trait = "0.1.81"
bytes = "1.7.1"
cfg-if = "1.0.0"
event-listener = "5.3.1"
fastwebsockets = { version = "0.8.0", features = ["unstable-split"], optional = true }
flume = "0.11.0"
futures-rustls = { version = "0.26.0", default-features = false, features = ["tls12", "ring"] }
futures-util = { version = "0.3.30", features = ["sink"] }
http = "1.1.0"
http-body-util = "0.1.2"
hyper = "1.4.1"
hyper-util-wasm = { git = "https://github.com/r58Playz/hyper-util-wasm", branch = "opinionated", version = "0.1.7", features = ["client-legacy", "http1"] }
js-sys = "0.3.70"
pin-project-lite = "0.2.14"
rustls-pemfile = { version = "2.1.3", optional = true }
rustls-webpki = { version = "0.102.7", optional = true }
send_wrapper = { version = "0.6.0", features = ["futures"] }
thiserror = "1.0.63"
tokio = "1.39.3"
wasm-bindgen = "0.2.93"
wasm-bindgen-futures = "0.4.43"
wasm-streams = "0.4.0"
web-sys = { version = "0.3.70", features = ["BinaryType", "Headers", "MessageEvent", "Request", "RequestInit", "Response", "ResponseInit", "Url", "WebSocket"] }
webpki-roots = "0.26.3"
wisp-mux = { path = "../wisp", features = ["wasm"], version = "5.1.0", default-features = false }

[dependencies.getrandom]
version = "*"
features = ["js"]

[dependencies.ring]
version = "*"
features = ["wasm32_unknown_unknown_js"]

[dependencies.rustls-pki-types]
version = "*"
features = ["web"]

[dependencies.parking_lot_core]
version = "*"
features = ["nightly"]

[features]
default = ["full"]
full = ["dep:fastwebsockets", "dep:async-compression", "dep:rustls-webpki", "dep:rustls-pemfile", "hyper-util-wasm/http2"]

