[package]
name = "epoxy-server"
version = "2.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
bytes = "1.7.1"
clap = { version = "4.5.16", features = ["cargo", "derive"] }
dashmap = "6.0.1"
env_logger = "0.11.5"
fastwebsockets = { version = "0.8.0", features = ["unstable-split", "upgrade"] }
futures-util = "0.3.30"
http-body-util = "0.1.2"
hyper = { version = "1.4.1", features = ["server", "http1"] }
hyper-util = { version = "0.1.7", features = ["tokio"] }
lazy_static = "1.5.0"
log = { version = "0.4.22", features = ["serde", "std"] }
regex = "1.10.6"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
serde_yaml = "0.9.34"
tokio = { version = "1.39.3", features = ["full"] }
tokio-util = { version = "0.7.11", features = ["compat", "io-util", "net"] }
toml = "0.8.19"
uuid = { version = "1.10.0", features = ["v4"] }
wisp-mux = { version = "5.0.0", path = "../wisp", features = ["fastwebsockets"] }
