[package]
name = "simple-wisp-client"
version = "1.0.0"
edition = "2021"

[dependencies]
atomic-counter = "1.0.1"
bytes = "1.7.1"
clap = { version = "4.5.16", features = ["cargo", "derive"] }
console-subscriber = { version = "0.4.0", optional = true }
fastwebsockets = { version = "0.8.0", features = ["unstable-split", "upgrade"] }
futures = "0.3.30"
http-body-util = "0.1.2"
humantime = "2.1.0"
hyper = { version = "1.4.1", features = ["http1", "client"] }
hyper-util = { version = "0.1.7", features = ["tokio"] }
simple_moving_average = "1.0.2"
tokio = { version = "1.39.3", features = ["full"] }
wisp-mux = { path = "../wisp", features = ["fastwebsockets"]}

[features]
tokio-console = ["tokio/tracing", "dep:console-subscriber"]

