[package]
name = "wisp-mux"
version = "5.1.0"
license = "LGPL-3.0-only"
description = "A library for easily creating Wisp servers and clients."
homepage = "https://github.com/MercuryWorkshop/epoxy-tls/tree/multiplexed/wisp"
repository = "https://github.com/MercuryWorkshop/epoxy-tls/tree/multiplexed/wisp"
readme = "README.md"
edition = "2021"
keywords = ["websocket", "wisp", "multiplexor", "multiplexing", "stream"]
categories = ["network-programming", "asynchronous", "web-programming::websocket", "wasm"]

[dependencies]
async-trait = "0.1.81"
atomic_enum = "0.3.0"
bitflags = { version = "2.6.0", optional = true, features = ["std"] }
bytes = "1.7.1"
ed25519 = { version = "2.2.3", optional = true, features = ["pem", "zeroize"] }
event-listener = "5.3.1"
fastwebsockets = { version = "0.8.0", features = ["unstable-split"], optional = true }
flume = "0.11.0"
futures = "0.3.30"
futures-timer = "3.0.3"
getrandom = { version = "0.2.15", features = ["std"], optional = true }
nohash-hasher = "0.2.0"
pin-project-lite = "0.2.14"
tokio = { version = "1.39.3", optional = true, default-features = false }

[features]
default = ["generic_stream", "certificate"]
fastwebsockets = ["dep:fastwebsockets", "dep:tokio"]
generic_stream = []
wasm = ["futures-timer/wasm-bindgen", "getrandom/js"]
certificate = ["dep:ed25519", "dep:bitflags", "dep:getrandom"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
